2003-09-27  Eric Blake  <ebb9@email.byu.edu>

	* src/case.h (IsAsciiAlpha, StringEqual): Removed compiler
	warnings.
	* src/op.cpp (OpDesc): Ditto.

2003-09-27  Eric Blake  <ebb9@email.byu.edu>

	* src/m4/ac_cxx_type_equivalence.m4: New file, needed for at least
	gcc 3.3	on cygwin.
	* Makefile.am: Add dependence on ac_cxx_type_equivalence.m4.
	* acinclude.m4: Ditto.
	* configure.ac: Require automake 1.7.6, and rename from
	configure.in as recommended by automake.
	* Makefile.in: Regenerate.
	* aclocal.m4: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* doc/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.
	* src/config.h.in: Ditto.
	* src/platform.h: Add TYPE_I4_IS_INT to clean up type warnings.
	* src/case.h: Fix type warnings under gcc 3.3.
	* src/double.cpp: Ditto.
	* src/double.h: Ditto.
	* src/long.h: Ditto.
	* src/lookup.cpp: Ditto.
	* src/lookup.h: Ditto.
	* src/stream.cpp: Ditto.

2003-06-29  Musachy Barroso  <insanus@bellsouth.net>

	* src/body.cpp:
	* src/decl.cpp:
	* src/error.cpp:
	* src/symbol.cpp:
	* src/symbol.h: On duplicated field or local variable
	error message, add location of original field or local
        variable declaration.

2003-06-29  Musachy Barroso  <insanus@bellsouth.net>

	* src/decl.cpp:
	* src/error.cpp:
	* src/symbol.cpp:
	* src/symbol.h: When a duplicate method or constructor
	is found, add information(location) about the original
	method or constructor declaration to the error message

2003-05-31  Eric Blake  <ebb9@email.byu.edu>

	* src/case.h:
	* src/getclass.cpp: Fix comparisons between wchar_t and int to
	avoid warnings.

2003-05-15  Chris Abbey  <jikes@cabbey.net>

	* Makefile.in: add HACKING file to dist list	

2003-04-18  Eric Blake  <ebb9@email.byu.edu>

	* src/case.h:
	* src/java.g: Fix typos.
	* src/javaact.cpp:
	* src/javaact.h:
	* src/javadcl.h:
	* src/javadef.h:
	* src/javaprs.h:
	* src/javasym.h: Regenerate, and with updated version of jikespg.
