@@ -3,8 +3,7 @@
 // This software is subject to the terms of the IBM Jikes Compiler
 // License Agreement available at the following URL:
 // http://ibm.com/developerworks/opensource/jikes.
-// Copyright (C) 1996, 1998, 1999, 2000, 2001, 2002 International Business
-// Machines Corporation and others.  All Rights Reserved.
+// Copyright (C) 1996, 2003 IBM Corporation and others.  All Rights Reserved.
 // You must accept the terms of that agreement to use this software.
 //
 
@@ -467,6 +466,7 @@ public:
           block_symbol(NULL),
           next_method(NULL),
           signature(NULL),
+          file_location(NULL),
           max_block_depth(1), // there must be at least one block in a method
           // this default is useful for default constructors.
           accessed_member(NULL),
@@ -1430,6 +1430,7 @@ public:
 
     VariableSymbol(const NameSymbol* name_symbol_)
         : declarator(NULL),
+          file_location(NULL),
           name_symbol(name_symbol_),
           owner(NULL),
           initial_value(NULL),
