@@ -1,3 +1,9 @@
+2003-10-01  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/symbol.h (MethodSymbol::file_location),
+	(VariableSymbol::file_location): Initialize to NULL - fix
+	regressions in patch on June 29.
+
 2003-09-27  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/case.h (IsAsciiAlpha, StringEqual): Removed compiler
